# FST-2022-Release

./: README.md  fst_aliases  fst_environment.sh  install_pipeline.sh  requirements.txt
src/common/big_brother/: CMakeLists.txt  package.xml
src/common/big_brother/config/: config.yaml  runs.yaml
src/common/big_brother/launch/: big_brother.launch
src/common/big_brother/scripts/: big_brother.py
src/common/big_brother/webserver/: BBbackend.py  BBserver.py  requirements.txt
src/common/can_sniffer/: CMakeLists.txt  package.xml
src/common/can_sniffer/launch/: can_sniffer.launch
src/common/can_sniffer/scripts/: can.py  vcan.sh
src/common/can_sniffer/src/: can_sniffer_handle.cpp  can_sniffer_main.cpp
src/common/common_meta_pkg/: CMakeLists.txt  package.xml
src/common/common_meta_pkg/missions/: acceleration.launch  autocross.launch  complete_pipeline.launch  ebs.launch  inspection.launch  record_pipeline.launch  skidpad.launch  tf.launch  trackdrive.launch
src/common/common_msgs/: CMakeLists.txt  package.xml
src/common/common_msgs/msg/: CarMotor.msg  CarPose.msg  CarVelocity.msg  CarVelocityArray.msg  Cone.msg  ConeDetections.msg  ConeKeyPoints.msg  ConeLidarMatrix.msg  ConeListMatrix.msg  ConesKeyPoints.msg  ControlCmd.msg  ControlMonitoring.msg  Cost.msg  Mission.msg  PointToFollow.msg  RES.msg  StaPositionInfo.msg  Track.msg
src/common/launcher/: CMakeLists.txt  package.xml
src/common/launcher/include/launcher/: launcher_handle.h
src/common/launcher/src/: launcher_handle.cpp  launcher_main.cpp
src/common/mission_tracker/: CMakeLists.txt  package.xml
src/common/mission_tracker/config/: mission_tracker_acceleration.yaml  mission_tracker_autocross.yaml  mission_tracker_ebs_test.yaml  mission_tracker_inspection.yaml  mission_tracker_skidpad.yaml  mission_tracker_trackdrive.yaml  mission_tracker_trackdrive_CI.yaml
src/common/mission_tracker/launch/: mission_tracker.launch
src/common/mission_tracker/src/: mission_tracker_handle.cpp  mission_tracker_main.cpp
src/common/pierre/: CMakeLists.txt  package.xml
src/common/pierre/cfg/: Pierre.cfg
src/common/pierre/launch/: pierre.launch
src/common/pierre/scripts/: calib_update.py
src/common/pierre/src/: pierre_handle.cpp  pierre_main.cpp  pierre_pipeline.cpp
src/control/control_meta_pkg/: CMakeLists.txt  package.xml
src/control/control_meta_pkg/missions/: control_complete.launch  control_ebs_test.launch  control_inspection.launch
src/control/controller/: CMakeLists.txt  package.xml
src/control/controller/config/: controller_acceleration.yaml  controller_default.yaml  controller_ebs_test.yaml  controller_inspection.yaml  controller_skidpad.yaml
src/control/controller/launch/: controller.launch
src/control/controller/src/: controller_handle.cpp  controller_main.cpp  controller_pid.cpp  controller_pipeline.cpp
src/control/new_planner/: CMakeLists.txt  package.xml
src/control/new_planner/config/: default.yaml
src/control/new_planner/launch/: new_planner.launch
src/control/new_planner/src/: new_planner_handle.cpp  new_planner_main.cpp  new_planner_particle.cpp
src/control/path_planner/: CMakeLists.txt  package.xml
src/control/path_planner/cfg/: PathPlanner.cfg
src/control/path_planner/config/: path_planner_default.yaml
src/control/path_planner/launch/: path_planner.launch
src/control/path_planner/src/: path_planner_handle.cpp  path_planner_main.cpp  path_planner_path_tree.cpp  path_planner_pipeline.cpp
src/control/svm/: CMakeLists.txt  package.xml
src/control/svm/config/: svm.yaml
src/control/svm/launch/: svm.launch  svm_python.launch
src/control/svm/scripts/: svm_path_planner.py  svm_path_planner_handle.py
src/control/svm/src/: svm_handle.cpp  svm_main.cpp  svm_pipeline.cpp
src/estimation/estimation_meta_pkg/: CMakeLists.txt  package.xml
src/estimation/estimation_meta_pkg/missions/: estimation_complete.launch
src/estimation/fastslam/: CMakeLists.txt  package.xml
src/estimation/fastslam/config/: fastslam_acceleration.yaml  fastslam_autocross.yaml  fastslam_skidpad.yaml  fastslam_trackdrive.yaml
src/estimation/fastslam/include/: as_lib
src/estimation/fastslam/launch/: fastslam.launch
src/estimation/fastslam/src/: fastslam_handle.cpp  fastslam_main.cpp  fastslam_motion_model.cpp  fastslam_particle.cpp
src/estimation/fastslam2_0/: CMakeLists.txt  package.xml
src/estimation/graphslam/: CMakeLists.txt  package.xml
src/estimation/state_estimation/: CMakeLists.txt  package.xml
src/perception/lidar/: CMakeLists.txt  package.xml
src/perception/lidar/cfg/: Lidar.cfg
src/perception/lidar/config/: cone_detector.yaml
src/perception/lidar/include/lidar/: lidar_cone_identification.h  lidar_cone_reconstruction.h  lidar_euclidian_clustering.h  lidar_handle.h  lidar_passthrough_filter.h  lidar_pipeline.h  lidar_ransac.h
src/perception/lidar/launch/: lidar_color_classification.launch  lidar_cone_detector.launch
src/perception/lidar/scripts/: color_net.py  lidar_color_classification.py  lidar_color_classification_handle.py
src/perception/lidar/src/: lidar_cone_identification.cpp  lidar_cone_reconstruction.cpp  lidar_euclidian_clustering.cpp  lidar_handle.cpp  lidar_main.cpp  lidar_passthrough_filter.cpp  lidar_pipeline.cpp  lidar_ransac.cpp
src/perception/perception_meta_pkg/: CMakeLists.txt  package.xml
src/simulation/fst_interface/: CMakeLists.txt  package.xml
src/simulation/simulation_meta_pkg/: CMakeLists.txt  package.xml
system_files/: .bashrc  arena_camera  arena_camera.service  big_brother  big_brother.service  can  can.service  default.rviz  env.sh  intel_camera  intel_camera.service  interfaces  launcher  launcher.service  ouster  ouster.service  phc2shm.service  phc2shm2.service  phc2sys2.service  pierre  pierre.service  remote  roscore.service  startup.service  startup.sh  sysctl.conf  telemetry.service  topics_to_record  usb_cam  usb_cam.service  watchdog  watchdog.service
system_files/chrony/: chrony.conf
system_files/linuxptp/: ptp4l.conf
system_files/sbin/: ptp4l
system_files/startup_scripts/: roscore_startup.sh  startup.sh
(+120 files in other folders)
