<package format="2">
  <name>lidar</name>
  <version>0.1.0</version>
  <description>
  This package provides lidar nodes
  </description>
  <maintainer email="pedrodiascoelho97@gmail.com">Pedro Coelho</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>

</package>
